fx2j-parser/src/test/resources/element/valid/single-property.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <alignment>
        TOP_RIGHT
    </alignment>
</VBox>