fx2j-parser/src/test/resources/element/invalid/include.fxml
<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:include/>
</VBox>